<resources>
    <string name="space"> </string>
    <string name="app_name">PTS-2 app</string>
    <string name="pos_fragment_label">PTS-2 app</string>
    <string name="extra_fragment_label">Extra</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="pumps_fragment_label">Pumps</string>
    <string name="pump_fragment_label">Pump</string>
    <string name="nozzles_fragment_label">Nozzles</string>
    <string name="connection_settings">Settings</string>
    <string name="field_HTTP_port_must_be_a_valid_number_between_0_and_65535">Field HTTP port must be a valid number between 0 and 65535</string>
    <string name="field_HTTPS_port_must_be_a_valid_number_between_0_and_65535">Field HTTPS port must be a valid number between 0 and 65535</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="failed_to_establish_a_connection">Failed to establish a connection</string>
    <string name="pts_run_test">Run test</string>
    <string name="previous">Back</string>
    <string name="fuel_name_label_with_colon">Fuel:</string>
    <string name="nozzle_label_with_colon">Nozzle:</string>
    <string name="state_label_with_colon">State:</string>
    <string name="volume_label_with_colon">Volume:</string>
    <string name="price_label_with_colon">Price:</string>
    <string name="amount_label_with_colon">Amount:</string>
    <string name="_value_with_units">%1$s%2$s</string>
    <string name="_value_with_units_in_parentheses">(%1$s%2$s)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="order">Order</string>
    <string name="payment">Payment</string>
    <string name="date_and_time">Date and Time</string>
    <string name="local_time">Local time:</string>
    <string name="pts2_time">PTS2 time:</string>
    <string name="get_local_and_pts2_time">Get local and PTS2 time</string>
    <string name="synchronize_pts2_time_to_local">Synchronize PTS2 time to local</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_synchronize_the_time">Are you sure you want to synchronize the time?</string>
    <string name="the_time_was_successfully_synchronized">The time was successfully synchronized</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="btn_full_tank">FT</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_00">00</string>
    <string name="btn_0_or_dot">0/.</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_C">C</string>
    <string name="btn_back">Back</string>
    <string name="btn_backspace">←</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_Pump">PUMP</string>
    <string name="btn_Nozzle">NOZZ</string>
    <string name="btn_Volume">VOL</string>
    <string name="btn_Amount">AMO</string>
    <string name="btn_new_order">New order</string>
    <string name="apply">Apply</string>
    <string name="the_pump_is_offline">The pump is offline</string>
    <string name="the_pump_is_undefined">The pump is undefined</string>
    <string name="select_the_pump_first">Select the pump first</string>
    <string name="select_the_pump_and_nozzle_first">Select the pump and nozzle first</string>
    <string name="the_pump_is_already_processing_an_order">The pump is already processing an order</string>
    <string name="date_and_time_retrieving_error">Date and time retrieving error</string>
    <string name="date_and_time_synchronization_error">Date and time synchronization error</string>
    <string name="pump">PUMP</string>
    <string name="nozz">NOZZ</string>
    <string name="state_machine_error">State machine error</string>
    <string name="wrong_pump_during_choosing_a_nozzle">Wrong pump during choosing a nozzle</string>
    <string name="the_pump_with_entered_number_not_configured">The pump with entered number not configured</string>
    <string name="the_chosen_nozzle_is_not_configured">The chosen nozzle is not configured</string>
    <string name="the_input_must_be_an_integer_value_during_pump_selection">The input must be an integer value during pump selection</string>
    <string name="the_input_must_be_an_integer_value_during_nozzle_selection">The input must be an integer value during nozzle selection</string>
    <string name="the_input_must_be_an_integer_value_during_quantity_selection">The input must be an integer value during quantity selection</string>
    <string name="the_input_must_be_an_decimal_value_during_amount_selection">The input must be an decimal value during amount selection</string>
    <string name="failed_to_execute_a_request">Failed to execute a request</string>
    <string name="the_pump_is_working_now">The pump is working now</string>
    <string name="are_you_sure_you_want_to_stop_the_pump_n">Are you sure you want to stop the pump №</string>
    <string name="the_order_was_formed_using_another_instance_of_application">The order was formed using another instance of application</string>
    <string name="select_nozzle">Select nozzle</string>

    <string-array name="protocol_entries">
        <item>HTTP</item>
        <item>HTTPS</item>
    </string-array>
    <string-array name="protocol_values">
        <item>http</item>
        <item>https</item>
    </string-array>

</resources>