<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.technotrade.pts2.pts2testapp.gui.viewmodel.ExtraViewModel" />

        <variable
            name="viewModel"
            type="com.technotrade.pts2.pts2testapp.gui.viewmodel.ExtraViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/poly_green"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNozzleCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/local_time"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="18dp"
                        android:text="@{viewModel.formattedLocalDateTime}"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvVolumeCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pts2_time"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="18dp"
                        android:text="@{viewModel.formattedPts2DateTime}"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bGetLocalAndPTS2Time"
                        style="@style/ButtonBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/get_local_and_pts2_time"
                        android:onClick="@{viewModel::onGetLocalAndPTS2TimeButtonClicked}" />

                    <Button
                        android:id="@+id/bSynchronizePts2TimeToLocal"
                        style="@style/ButtonBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/synchronize_pts2_time_to_local"
                        android:onClick="@{viewModel::onSynchronizePts2TimeToLocalButtonClicked}" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>